@@ -37,6 +37,8 @@ class ArchiveEntry
                      const char* dateStr, time_t timeValue, const char* methodStr, const char* crcStr);
         ~ArchiveEntry();
 
+        void              RecalculateRatio();
+
         bool              m_isDir;
         time_t            m_timeValue;
         char*             m_nameStr,
