@@ -21,6 +21,8 @@
 
 <P><B>Version 1.00</B>
 <UL type=disc>
+<LI>Add basic support for multipart rar archives
+<LI>Disable arj support and creating/writing of rar archives until Haiku has modern ports of these
 <LI>Enhanced path checking for worker binaries
 <LI>Added support for xz archives
 <LI>Removed obsolete ZETA code
